change mobile to Mobile.

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
                                         <input type="text" name="email" id="email" />
                                 </div>
                                 <div class="wrapper-block">
-                                        <label>mobile:<span class="small-label">please enter your mobile number</span></label>
+                                        <label>Mobile:<span class="small-label">please enter your mobile number</span></label>
                                         <input type="text" name="mobile" id="mobile" />
                                 </div>
                                 <input type="submit" value="Submit" class="submit btn-form" /></input>
