put have fun and get fit on separate lines.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
 	<div class="span12">
       	    <div class="row-fluid heading">
 	      <div class="span12">
-	  	<h1>have fun. get fit.</h1>
+	  	<h1>have fun.</h1>
+	  	<h1>get fit.</h1>
 	      </div>
       	    </div>
       	    <div class="row-fluid subheading">
