update membership pricing information and marketing message.

--- a/index.html
+++ b/index.html
@@ -304,14 +304,14 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 				<td class="last">6 Months</td>
 			</tr>
 			<tr class="even">
-				<td class="first">Trial Membership</td>
-				<td>100,000 KRW</td>
+				<td class="first">Trial [1st Month Only]</td>
+				<td>150,000 KRW</td>
 				<td> - </td>
 				<td class="last"> - </td>
 			</tr>
 			<tr class="odd">
 				<td class="first">Regular Membership</td>
-				<td>300,000 KRW</td>
+				<td> - </td>
 				<td>600,000 KRW</td>
 				<td class="last">900,000 KRW</td>
 			</tr>
