--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       .faq .accordion-inner 					{ text-align : center; font-size: 11px; }
       .faq .accordion-inner td					{ width : 200px; }
       .faq a 							{ color: #faa732; }
-      .footer 							{ text-shadow: 0px 0px 0px; color: #cccccc; font-family: 'Dorsa', Helvetica, Arial, san-serif; text-align: center; }
+      .footer 							{ background-color: #bbbbbb; color: #cccccc; font-family: 'Dorsa', Helvetica, Arial, san-serif; text-align: center; }
       .footer p 						{ font-size: 18px; }
       .footer a 						{ color: #ccccff; }
       .separator {
