break the footer out of the container

--- a/index.html
+++ b/index.html
@@ -359,6 +359,8 @@ Feel free to contact him directly for further information or with inquiries abou
 	    <div class="span4"> </div>
 	  </div>
 	</div>
+      </div>
+    </div>
     <!-- Footer -->
     <div class="row-fluid footer">
       <div class="span12">
