change trial membership to indicate 5 classes per month

--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 			<tr class="even">
 				<td class="first">Trial Membership</td>
 				<td>150,000 KRW</td>
-				<td> - </td>
-				<td class="last"> - </td>
+				<td>400,000 KRW</td>
+				<td class="last">600,000</td>
 			</tr>
 			<tr class="odd">
 				<td class="first">Regular Membership</td>
