--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>CDO Seoul</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Information about Quilombola Recreation's Cordão de Ouro Capoeira Classes in Seoul">
-    <meta name="author" content="Instructor Zumbi | Munair Simpson | Quilombola Seoul">
+    <meta name="author" content="Instrutor Zumbi | Munair Simpson | Quilombola Seoul">
     <!-- Stylesheets -->
     <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Limelight|Orbitron|Syncopate|Dorsa">
     <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
