--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
       .faq .accordion-heading 					{ text-align : center; }
       .faq .accordion-inner 					{ text-align : center; font-size: 11px; }
       .faq .accordion-inner td					{ width : 200px; }
+      .faq .last						{ color: #bbbbbb; }
       .faq a 							{ color: #faa732; }
-      .footer 							{ background-color: #bbbbbb; color: #cccccc; font-family: 'Dorsa', Helvetica, Arial, san-serif; text-align: center; }
+      .footer 							{ background-color: #ffffff; color: #cccccc; font-family: 'Dorsa', Helvetica, Arial, san-serif; text-align: center; }
       .footer p 						{ font-size: 18px; }
       .footer a 						{ color: #ccccff; }
       .separator {
@@ -301,19 +302,22 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 				<td class="first"></td>
 				<td>1 Month</td>
 				<td>3 Months</td>
-				<td class="last">6 Months</td>
+				<td>6 Months</td>
+				<td class="last">Classes Included</td>
 			</tr>
 			<tr class="even">
 				<td class="first">Trial Membership</td>
 				<td>150,000 KRW</td>
 				<td>400,000 KRW</td>
-				<td class="last">600,000</td>
+				<td>600,000 KRW</td>
+				<td class="last">5 Monthly</td>
 			</tr>
 			<tr class="odd">
 				<td class="first">Regular Membership</td>
 				<td>300,000 KRW</td>
 				<td>600,000 KRW</td>
-				<td class="last">900,000 KRW</td>
+				<td>900,000 KRW</td>
+				<td class="last">Unlimited</td>
 			</tr>
 		      </table>
                     </div>
