darken last class text

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       .faq .accordion-heading 					{ text-align : center; }
       .faq .accordion-inner 					{ text-align : center; font-size: 11px; }
       .faq .accordion-inner td					{ width : 200px; }
-      .faq .last						{ color: #bbbbbb; }
+      .faq .last						{ color: #aaaaaa; }
       .faq a 							{ color: #faa732; }
       .footer 							{ background-color: #ffffff; color: #cccccc; font-family: 'Dorsa', Helvetica, Arial, san-serif; text-align: center; }
       .footer p 						{ font-size: 18px; }
