--- a/index.html
+++ b/index.html
@@ -306,11 +306,11 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 				<td class="last">Classes Included</td>
 			</tr>
 			<tr class="even">
-				<td class="first">Trial Membership</td>
+				<td class="first">Trial / Limited Membership</td>
 				<td>150,000 KRW</td>
 				<td>400,000 KRW</td>
 				<td>600,000 KRW</td>
-				<td class="last">5 Monthly</td>
+				<td class="last">6 Monthly</td>
 			</tr>
 			<tr class="odd">
 				<td class="first">Regular Membership</td>
