--- a/index.html
+++ b/index.html
@@ -199,12 +199,15 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 	    	<iframe width="100%" height="290px" src="//www.youtube.com/embed/Uj6TrMeRVVE?list=PLvwqVZM4dmjXgi_ktHO_w8ULZr-pXpZtA" frameborder="0" allowfullscreen></iframe>
 	      </div>
 	      <div class="span4">
-		<h5>Testimonials</h5><hr />
+		<h5>News/Testimonials</h5><hr />
 		<div id="testimonials" class="carousel slide">
 		  <ol class="carousel-indicators">
 		    <li data-target="#testimonials" data-slide-to="0" class="active"></li>
 		    <li data-target="#testimonials" data-slide-to="1"></li>
 		    <li data-target="#testimonials" data-slide-to="2"></li>
+		    <li data-target="#testimonials" data-slide-to="3"></li>
+		    <li data-target="#testimonials" data-slide-to="4"></li>
+		    <li data-target="#testimonials" data-slide-to="5"></li>
 		  </ol>
 		  <!-- Carousel items -->
 		  <div class="carousel-inner">
@@ -232,11 +235,35 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
                         </tr>
                       </table>
 		    </div>
+		    <div class="item">
+                      <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/mbn-logo-300x200px.jpg" border="0" alt="testimonial photo" width="100%" height="225px">
+                      <table class="testimonials">
+                        <tr>
+                          <th>CDO Seoul featured on <a href="http://www.mbn.co.kr/pages/vod/programView.mbn?bcastSeqNo=1046234" target="_blank">MBN</a></th>
+                        </tr>
+                      </table>
+		    </div>
+		    <div class="item">
+                      <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/redbull-logo-300x200px.jpg" border="0" alt="testimonial photo" width="100%" height="225px">
+                      <table class="testimonials">
+                        <tr>
+                          <th>CDO Seoul featured in <a href="http://www.youtube.com/watch?v=JmstTp-uggI" target="_blank">Red Bull Documentary</a></th>
+                        </tr>
+                      </table>
+		    </div>
+		    <div class="item">
+                      <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/koreaherald-logo-300x200px.jpg" border="0" alt="testimonial photo" width="100%" height="225px">
+                      <table class="testimonials">
+                        <tr>
+                          <th>CDO Seoul featured in <a href="http://www.koreaherald.com/view.php?ud=20120828000982&cpv=0" target="_blank">The Korea Herald</a></th>
+                        </tr>
+                      </table>
+		    </div>
 		  </div>
 		  <!-- Carousel nav -->
 		  <a class="carousel-control left" href="#testimonials" data-slide="prev">&lsaquo;</a>
 		  <a class="carousel-control right" href="#testimonials" data-slide="next">&rsaquo;</a>
-		 </div>
+		</div>
 	      </div>
       	    </div>
 	  </div>
