--- a/index.html
+++ b/index.html
@@ -281,12 +281,32 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 		      <div class="accordion-inner">
 			<table align="center">
 			  <tr>
-			    <td class="first">Monday - Thursday</td>
-			    <td>8:30 PM - 10:30 PM</td>
+			    <td class="first"> </td>
+			    <td>Method</td>
+			    <td>Monday - Thursday</td>
+			    <td>Saturday - Sunday</td>
+			    <td class="last">Duration</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Saturday - Sunday</td>
-			    <td>10:30 AM - 2:30 PM</td>
+			    <td class="first">Gold</td>
+			    <td>1-On-1</td>
+			    <td>Reservation Only</td>
+			    <td>Reservation Only</td>
+			    <td class="last">50 Minutes</td>
+			  </tr>
+			  <tr>
+			    <td class="first">Silver</td>
+			    <td>Group</td>
+			    <td>8:30 PM</td>
+			    <td>10:30 AM</td>
+			    <td class="last">110 Minutes</td>
+			  </tr>
+			  <tr>
+			    <td class="first">Bronze</td>
+			    <td>Group</td>
+			    <td>8:30 PM</td>
+			    <td>10:30 AM</td>
+			    <td class="last">80 Minutes</td>
 			  </tr>
 			</table>
 		      </div>
