--- a/index.html
+++ b/index.html
@@ -283,30 +283,30 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 			  <tr>
 			    <td class="first"> </td>
 			    <td>Method</td>
-			    <td>Monday - Thursday</td>
-			    <td>Saturday - Sunday</td>
-			    <td class="last">Duration</td>
+			    <td>Mo - Th</td>
+			    <td>Sa - Su</td>
+			    <td class="last">Time</td>
 			  </tr>
 			  <tr>
 			    <td class="first">Gold</td>
 			    <td>1-On-1</td>
-			    <td>Reservation Only</td>
-			    <td>Reservation Only</td>
-			    <td class="last">50 Minutes</td>
+			    <td>Reservation</td>
+			    <td>Reservation</td>
+			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
 			    <td class="first">Silver</td>
 			    <td>Group</td>
 			    <td>8:30 PM</td>
 			    <td>10:30 AM</td>
-			    <td class="last">110 Minutes</td>
+			    <td class="last">110m</td>
 			  </tr>
 			  <tr>
 			    <td class="first">Bronze</td>
 			    <td>Group</td>
 			    <td>8:30 PM</td>
 			    <td>10:30 AM</td>
-			    <td class="last">80 Minutes</td>
+			    <td class="last">80m</td>
 			  </tr>
 			</table>
 		      </div>
