Update class hours: Reservation to RSVP.

--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 			  <tr>
 			    <td class="first">Gold</td>
 			    <td>1-On-1</td>
-			    <td>Reservation</td>
-			    <td>Reservation</td>
+			    <td>RSVP</td>
+			    <td>RSVP</td>
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
