Update class membership information.

--- a/index.html
+++ b/index.html
@@ -346,25 +346,32 @@ The dance studio where we hold classes is located right in front of exit 9 (show
                     <div class="accordion-inner">
 		      <table align="center">
 			<tr>
-				<td class="first"></td>
-				<td>1 Month</td>
-				<td>3 Months</td>
-				<td>6 Months</td>
-				<td class="last">Classes Included</td>
+				<td class="first"> </td>
+				<td>1 Mo</td>
+				<td>3 Mo</td>
+				<td>6 Mo</td>
+				<td class="last">Classes</td>
 			</tr>
 			<tr class="even">
-				<td class="first">Trial / Limited Membership</td>
-				<td>150,000 KRW</td>
-				<td>400,000 KRW</td>
-				<td>600,000 KRW</td>
-				<td class="last">6 Monthly</td>
+				<td class="first">Gold</td>
+				<td>700k KRW</td>
+				<td>1400k KRW</td>
+				<td>2100k KRW</td>
+				<td class="last">10 Monthly</td>
 			</tr>
 			<tr class="odd">
-				<td class="first">Regular Membership</td>
-				<td>300,000 KRW</td>
-				<td>600,000 KRW</td>
-				<td>900,000 KRW</td>
-				<td class="last">Unlimited</td>
+				<td class="first">Silver</td>
+				<td>300k KRW</td>
+				<td>600k KRW</td>
+				<td>900k KRW</td>
+				<td class="last">20 Monthly</td>
+			</tr>
+			<tr class="even">
+				<td class="first">Bronze</td>
+				<td>150k KRW</td>
+				<td>400k KRW</td>
+				<td>600k KRW</td>
+				<td class="last">5 Monthly</td>
 			</tr>
 		      </table>
                     </div>
