--- a/index.html
+++ b/index.html
@@ -297,15 +297,15 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 			  <tr>
 			    <td class="first">Silver</td>
 			    <td>Group</td>
-			    <td>8:30 PM</td>
-			    <td>10:30 AM</td>
+			    <td>830P</td>
+			    <td>1030A</td>
 			    <td class="last">110m</td>
 			  </tr>
 			  <tr>
 			    <td class="first">Bronze</td>
 			    <td>Group</td>
-			    <td>8:30 PM</td>
-			    <td>10:30 AM</td>
+			    <td>830P</td>
+			    <td>1030A</td>
 			    <td class="last">80m</td>
 			  </tr>
 			</table>
@@ -347,10 +347,10 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 		      <table align="center">
 			<tr>
 				<td class="first"> </td>
-				<td>1 Mo</td>
-				<td>3 Mo</td>
-				<td>6 Mo</td>
-				<td class="last">Classes</td>
+				<td>1 Month</td>
+				<td>3 Months</td>
+				<td>6 Months</td>
+				<td class="last">Classes Incuded</td>
 			</tr>
 			<tr class="even">
 				<td class="first">Gold</td>
@@ -371,7 +371,7 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 				<td>150k KRW</td>
 				<td>400k KRW</td>
 				<td>600k KRW</td>
-				<td class="last">5 Monthly</td>
+				<td class="last">~5 Monthly</td>
 			</tr>
 		      </table>
                     </div>
