--- a/base.html
+++ b/base.html
@@ -62,6 +62,7 @@
       body 							{ font-family: 'Limelight', Helvetica, Arial, san-serif; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
       .heading 							{ font-family: 'Orbitron', Helvetica, Arial, san-serif; text-align: center; }
       .subheading 						{ font-family: 'Syncopate', Helvetica, Arial, san-serif; text-align: center; color: #faa732; }
+      table .last						{ text-align: right; color: #aaaaaa; }
       p.lead 							{ padding-top: 1.5%; font-size: 16px; line-height: 30px; }
       p 							{ font-size: 14px; line-height: 24px; }
       h5 							{ text-align: center }
