--- a/meditation.html
+++ b/meditation.html
@@ -19,11 +19,14 @@
       	    <div class="row-fluid description">
 	      <div id="about" class="span12 copy">
 	        <p>
-Relieve stress and maintain your physical health with <a href="http://www.zumbicdo.com" target="zumba">Instrutor Zumbi</a>'s Capoeira-energized morning meditation. The session lasts exactly one hour long and consists of 30 minutes of vigorous Capoeira, and 30 minutes of peaceful contemplation in a posture of your choosing. During the Capoeira session we will practice simple capoeira movement repeatedly while maintaining a focus on our breathing. During the contemplation session with will practice traditional <a href="en.wikipedia.org/wiki/Samatha" target="samatha">Samatha Meditation</a> in silence. Leave quietly at the end of the hour or feel free to stay in mindful observation of the breath.
+Relieve stress and maintain your physical health with <a href="http://www.zumbicdo.com" target="zumba">Instrutor Zumbi</a>'s Capoeira-energized morning meditation. The session lasts exactly one hour long. It consists of 30 minutes of vigorous Capoeira and 30 minutes of peaceful contemplation in a posture (seated/standing/laying) of your choosing. During the Capoeira session we practice simple capoeira movement repeatedly while maintaining a focus on our breathing. During the contemplation session we practice traditional <a href="http://en.wikipedia.org/wiki/Samatha" target="samatha">Samatha Meditation</a> in silence. Leave quietly at the end of the hour or feel free to stay in mindful observation of the breath as long as you can.
 	        </p>
 	        <p>
 Silence will be observed!
 	        </p>
+	        <table align="center">
+		  <tr><td><img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/qu-recreation-logo-300x120px.png" width="45%"></td><td><img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/cdoseoul-logo-alpha-300x300px.png" width="45%"></td></tr>
+	        </table>
 	      </div><hr />
 	    </div>
       	    <div class="row-fluid marketing">
@@ -32,12 +35,9 @@ Silence will be observed!
 	        <table align="center">
 		  <tr><td>Practice: </td><td class="last"> Weekdays</td></tr>
 		  <tr><td>Period: </td><td class="last"> 7AM - 8AM</td></tr>
+		  <tr><td>Price: </td><td class="last"> 100,000 KRW</td></tr>
 		  <tr><td>Place: </td><td class="last"> Tap Dance | 5F 102-2 Goryo Building Jongno-2ga | Jongno-gu</td></tr>
-		  <tr><td>Price: </td><td class="last"> 150,000 KRW</td></tr>
 		  <tr><td> </td><td> </td></tr>
-	        </table>
-	        <table align="center">
-		  <tr><td><img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/qu-recreation-logo-300x120px.png" width="45%"></td><td><img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/cdoseoul-logo-alpha-300x300px.png" width="45%"></td></tr>
 	        </table>
 	      </div>
 	      <div class="span6">
