Fixed link, formatting, spelling and grammatical errors.

--- a/meditation.html
+++ b/meditation.html
@@ -22,7 +22,7 @@
 Relieve stress and maintain your physical health with <a href="http://www.zumbicdo.com" target="zumba">Instrutor Zumbi</a>'s Capoeira-energized morning meditation. The session lasts exactly one hour long. It consists of 30 minutes of vigorous Capoeira and 30 minutes of peaceful contemplation in a posture (seated/standing/laying) of your choosing. During the Capoeira session we practice simple capoeira movement repeatedly while maintaining a focus on the breath. During the contemplation session we practice traditional <a href="http://en.wikipedia.org/wiki/Samatha" target="samatha">Samatha Meditation</a> in silence. Leave quietly at the end of the hour or feel free to stay in mindful observation of the breath as long as you can.
 	        </p>
 	        <p>
-Silence will be observed!
+Silence will be observed! Please complete the reservation form below join.
 	        </p>
 	        <table align="center">
 		  <tr><td><img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/qu-recreation-logo-300x120px.png" width="45%"></td><td><img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/cdoseoul-logo-alpha-300x300px.png" width="45%"></td></tr>
@@ -41,7 +41,7 @@ Silence will be observed!
 	        </table>
 	      </div>
 	      <div class="span6">
-		<h5>Information Request Form</h5><hr />
+		<h5>Reservation Form</h5><hr />
                 <div id="stylized-form">
                         <form id="form" name="form" method="post" action="/contact">
                                 <div class="wrapper-block">
