--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 	      </div>
 	      <div class="span4">
 		<h5>Capoeira Games</h5><hr />
-	    	<iframe width="100%" height="290px" src="//www.youtube.com/embed/Uj6TrMeRVVE?list=PLvwqVZM4dmjXgi_ktHO_w8ULZr-pXpZtA" frameborder="0" allowfullscreen></iframe>
+	    	<iframe width="100%" height="290px" src="//www.youtube.com/embed/j1KPxEF1idA?list=PLvwqVZM4dmjXgi_ktHO_w8ULZr-pXpZtA" frameborder="0" allowfullscreen></iframe>
 	      </div>
 	      <div class="span4">
 		<h5>News/Testimonials</h5><hr />
@@ -148,14 +148,14 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 			    <td class="first">Silver</td>
 			    <td>Group</td>
 			    <td>830P</td>
-			    <td>1030A</td>
+			    <td>1100A</td>
 			    <td class="last">110m</td>
 			  </tr>
 			  <tr>
 			    <td class="first">Bronze</td>
 			    <td>Group</td>
 			    <td>830P</td>
-			    <td>1030A</td>
+			    <td>1100A</td>
 			    <td class="last">80m</td>
 			  </tr>
 			</table>
