Updating Google Analytics Script

--- a/base.html
+++ b/base.html
@@ -171,11 +171,13 @@ copyright (c) 2012 quilombola | cordao de ouro seoul. all rights reserved.
 	</p>
 	<!-- Goggle ga.js -->
 	<script type="text/javascript">
-	
+
 	  var _gaq = _gaq || [];
 	  _gaq.push(['_setAccount', 'UA-17239993-2']);
+	  _gaq.push(['_setDomainName', 'cdoseoul.com']);
+	  _gaq.push(['_setAllowLinker', true]);
 	  _gaq.push(['_trackPageview']);
-
+	
 	  (function() {
 	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
 	    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
