Updated the form to collect Referral and validate humans with simple CAPTCHA

--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
                                         <label>Mobile:<span class="small-label">please enter your mobile number</span></label>
                                         <input type="text" name="mobile" id="mobile" />
                                 </div>
+                                <div class="wrapper-block">
+                                        <label>Referral:<span class="small-label">how did you find out about us?</span></label>
+                                        <input type="text" name="mobile" id="mobile" />
+                                </div>
+                                <div class="wrapper-block">
+                                        <label>Validation:<span class="small-label">please enter "<b>capoeira</b>"</span></label>
+                                        <input type="text" name="mobile" id="mobile" />
+                                </div>
                                 <input type="submit" value="Submit" class="submit btn-form" /></input>
                         </form>
                 </div>
