Testing new form.

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
                                 </div>
                                 <div class="wrapper-block">
                                         <label>Referral:<span class="small-label">how did you find out about us?</span></label>
-                                        <input type="text" name="mobile" id="mobile" />
+                                        <input type="text" name="referral" id="referral" />
                                 </div>
                                 <div class="wrapper-block">
                                         <label>Validation:<span class="small-label">please enter "<b>capoeira</b>"</span></label>
-                                        <input type="text" name="mobile" id="mobile" />
+                                        <input type="text" name="validation" id="validation" />
                                 </div>
                                 <input type="submit" value="Submit" class="submit btn-form" /></input>
                         </form>
