--- a/index.html
+++ b/index.html
@@ -202,33 +202,39 @@ The dance studio where we hold classes is located right in front of exit 9 (show
                   </div>
                   <div id="collapseThree" class="accordion-body collapse">
                     <div class="accordion-inner">
+		      <p style="font-size:12px">
+Private classes are 700,000 KRW for ten classes. <em>Gold</em> level memberships listed in the table below are also available.
+		      </p>
+		      <p style="font-size:12px">
+Group classes are 20,000 KRW per class. Alternatively, choose one of our class memberships from the table below. Class memberships are valid for a certain period of time and cover all classes if you join at the <em>silver</em> level, or one class a week if you join at the <em>bronze</em> level.
+		      </p>
 		      <table align="center">
 			<tr>
 				<td class="first"> </td>
-				<td>1 Month</td>
 				<td>3 Months</td>
 				<td>6 Months</td>
+				<td>12 Months</td>
 				<td class="last">Classes Incuded</td>
 			</tr>
 			<tr class="even">
 				<td class="first">Gold</td>
-				<td>700k KRW</td>
 				<td>1400k KRW</td>
 				<td>2100k KRW</td>
+				<td>3500k KRW</td>
 				<td class="last">10 Monthly</td>
 			</tr>
 			<tr class="odd">
 				<td class="first">Silver</td>
-				<td>300k KRW</td>
 				<td>600k KRW</td>
 				<td>900k KRW</td>
+				<td>1500k KRW</td>
 				<td class="last">20 Monthly</td>
 			</tr>
 			<tr class="even">
 				<td class="first">Bronze</td>
-				<td>150k KRW</td>
 				<td>400k KRW</td>
 				<td>600k KRW</td>
+				<td>1000k KRW</td>
 				<td class="last">~5 Monthly</td>
 			</tr>
 		      </table>
