--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 		      <p style="font-size:12px">
 		      </p>
 		      <p style="font-size:12px">
-Private classes are 700,000 KRW for ten classes. Group classes are 20,000 KRW per class. Or simply choose one of our class memberships from the table below. Class memberships are valid for a certain period of time and cover all group classes if you join at the <b>silver</b> level, or one group class a week if you join at the <b>bronze</b> level. 
+Private classes are 700,000 KRW for ten classes. Group classes are now 20,000 KRW per class. Or simply choose one of our class memberships from the table below. Class memberships are valid for a certain period of time and cover all group classes if you join at the <b>silver</b> level, or one group class a week if you join at the <b>bronze</b> level. 
 		      </p>
 		      <table align="center">
 			<tr>
