update pricing information

--- a/index.html
+++ b/index.html
@@ -146,21 +146,21 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 			    <td class="last">Time</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Gold</td>
+			    <td class="first">Private</td>
 			    <td>1-On-1</td>
 			    <td>RSVP</td>
 			    <td>RSVP</td>
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Silver</td>
+			    <td class="first">Advanced</td>
 			    <td>Group</td>
 			    <td>830P</td>
 			    <td>1100A</td>
 			    <td class="last">110m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Bronze</td>
+			    <td class="first">Beginner</td>
 			    <td>Group</td>
 			    <td>830P</td>
 			    <td>1100A</td>
@@ -205,7 +205,7 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 		      <p style="font-size:12px">
 		      </p>
 		      <p style="font-size:12px">
-Private classes are 700,000 KRW for ten classes. Group classes are now 20,000 KRW per class. Or simply choose one of our class memberships from the table below. Class memberships are valid for a certain period of time and cover all group classes if you join at the <b>silver</b> level, or one group class a week if you join at the <b>bronze</b> level. 
+Private classes are 700,000 KRW for ten classes. Group classes are now 20,000 KRW per class. Or simply choose one of our class memberships from the table below. Class memberships are valid for a certain period of time and cover all group classes if you join at the <b>advanced</b> level, or one group class a week if you join at the <b>beginner</b> level. You can pay in full by credit card at the Quilombola Recreation office, or send a bank transfer to KEB Account 611-021258-055 (Munair Simpson) if you prefer to pay in two or three installments. 
 		      </p>
 		      <table align="center">
 			<tr>
@@ -216,24 +216,24 @@ Private classes are 700,000 KRW for ten classes. Group classes are now 20,000 KR
 				<td class="last">Classes Incuded</td>
 			</tr>
 			<tr class="even">
-				<td class="first">Gold</td>
+				<td class="first">Private</td>
 				<td>1400k KRW</td>
 				<td>2100k KRW</td>
 				<td>3500k KRW</td>
 				<td class="last">10 Monthly</td>
 			</tr>
 			<tr class="odd">
-				<td class="first">Silver</td>
+				<td class="first">Advanced</td>
 				<td>600k KRW</td>
-				<td>900k KRW</td>
-				<td>1500k KRW</td>
-				<td class="last">20 Monthly</td>
+				<td>1200k KRW</td>
+				<td>1800k KRW</td>
+				<td class="last">~20 Monthly</td>
 			</tr>
 			<tr class="even">
-				<td class="first">Bronze</td>
-				<td>400k KRW</td>
+				<td class="first">Beginner</td>
+				<td>300k KRW</td>
 				<td>600k KRW</td>
-				<td>1000k KRW</td>
+				<td>1200k KRW</td>
 				<td class="last">~5 Monthly</td>
 			</tr>
 		      </table>
