--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ The dance studio where we hold classes is located right in front of exit 9 (show
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse"
                        data-parent="accordion2" href="#collapseThree">
-                      Class Membership
+                      Class Fees
                     </a>
                   </div>
                   <div id="collapseThree" class="accordion-body collapse">
@@ -205,7 +205,7 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 		      <p style="font-size:12px">
 		      </p>
 		      <p style="font-size:12px">
-Private classes are 700,000 KRW for ten classes. Group classes are now 20,000 KRW per class. Or simply choose one of our class memberships from the table below. Class memberships are valid for a certain period of time and cover all group classes if you join at the <b>advanced</b> level, or one group class a week if you join at the <b>beginner</b> level. You can pay in full by credit card at the Quilombola Recreation office, or send a bank transfer to KEB Account 611-021258-055 (Munair Simpson) if you prefer to pay in two or three installments. 
+Private classes are 700,000 KRW for ten classes. Group classes are 30,000 KRW per class. You may also choose to become a member by selecting one of the class memberships from the table below. Class memberships are valid for a certain period of time and cover all group classes if you join at the <b>advanced</b> level, or one group class a week if you join at the <b>beginner</b> level. You can pay in full by credit card at the Quilombola Recreation office, or send a bank transfer to KEB Account 611-021258-055 (Munair Simpson) if you prefer to pay in two or three monthly installments. 
 		      </p>
 		      <table align="center">
 			<tr>
@@ -220,7 +220,7 @@ Private classes are 700,000 KRW for ten classes. Group classes are now 20,000 KR
 				<td>1400k KRW</td>
 				<td>2100k KRW</td>
 				<td>3500k KRW</td>
-				<td class="last">10 Monthly</td>
+				<td class="last">~20 Monthly</td>
 			</tr>
 			<tr class="odd">
 				<td class="first">Advanced</td>
