update pricing information - class fees

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Private classes are 700,000 KRW for ten classes. Group classes are 30,000 KRW pe
 				<td>3 Months</td>
 				<td>6 Months</td>
 				<td>12 Months</td>
-				<td class="last">Classes Incuded</td>
+				<td class="last">Classes Included</td>
 			</tr>
 			<tr class="even">
 				<td class="first">Private</td>
@@ -234,7 +234,7 @@ Private classes are 700,000 KRW for ten classes. Group classes are 30,000 KRW pe
 				<td>300k KRW</td>
 				<td>600k KRW</td>
 				<td>1200k KRW</td>
-				<td class="last">~5 Monthly</td>
+				<td class="last">~4 Monthly</td>
 			</tr>
 		      </table>
                     </div>
