--- a/index.html
+++ b/index.html
@@ -193,11 +193,12 @@ The dance studio where we hold classes is located right in front of exit 9 (show
                       </div>
                     </div>
                   </div>
+		</div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse"
                        data-parent="accordion2" href="#collapseThree">
-                      Class Fees
+                      Class Passes
                     </a>
                   </div>
                   <div id="collapseThree" class="accordion-body collapse">
@@ -205,7 +206,44 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 		      <p style="font-size:12px">
 		      </p>
 		      <p style="font-size:12px">
-Private classes are 700,000 KRW for ten classes. Group classes are 30,000 KRW per class. You may also choose to become a member by selecting one of the class memberships from the table below. Class memberships are valid for a certain period of time and cover all group classes if you join at the <b>advanced</b> level, or one group class a week if you join at the <b>beginner</b> level. You can pay in full by credit card at the Quilombola Recreation office, or send a bank transfer to KEB Account 611-021258-055 (Munair Simpson) if you prefer to pay in two or three monthly installments. 
+Sign up by selecting one of the class passes from the table below. Class memberships are valid for a certain period of time. Please make payment before attending the first class in cash or via bank transfer to KEB Account 611-021258-055 (Munair Simpson).
+		      </p>
+		      <table align="center">
+			<tr>
+				<td class="first"> </td>
+				<td>1 Class</td>
+				<td>10 Class</td>
+				<td class="last">Validity</td>
+			</tr>
+			<tr class="even">
+				<td class="first">Private</td>
+				<td>90k KRW</td>
+				<td>600k KRW</td>
+				<td class="last">2 Months</td>
+			</tr>
+			<tr class="odd">
+				<td class="first">Group</td>
+				<td>30k KRW</td>
+				<td>200k KRW</td>
+				<td class="last">1 Month</td>
+			</tr>
+		      </table>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-group">
+                  <div class="accordion-heading">
+                    <a class="accordion-toggle" data-toggle="collapse"
+                       data-parent="accordion2" href="#collapseThree">
+                      Class Memberships
+                    </a>
+                  </div>
+                  <div id="collapseThree" class="accordion-body collapse">
+                    <div class="accordion-inner">
+		      <p style="font-size:12px">
+		      </p>
+		      <p style="font-size:12px">
+Become a member by selecting one of the group class memberships from the table below. Class memberships are valid for a certain period of time and cover all group classes if you join at the <b>advanced</b> level, or one group class a week if you join at the <b>beginner</b> level. You can pay in full by credit card at the Quilombola Recreation office, or send a bank transfer to KEB Account 611-021258-055 (Munair Simpson). You may also pay in two or three monthly installments. 
 		      </p>
 		      <table align="center">
 			<tr>
@@ -215,16 +253,9 @@ Private classes are 700,000 KRW for ten classes. Group classes are 30,000 KRW pe
 				<td>12 Months</td>
 				<td class="last">Classes Included</td>
 			</tr>
-			<tr class="even">
-				<td class="first">Private</td>
-				<td>1400k KRW</td>
-				<td>2100k KRW</td>
-				<td>3500k KRW</td>
-				<td class="last">~20 Monthly</td>
-			</tr>
 			<tr class="odd">
 				<td class="first">Advanced</td>
-				<td>600k KRW</td>
+				<td>900k KRW</td>
 				<td>1200k KRW</td>
 				<td>1800k KRW</td>
 				<td class="last">~20 Monthly</td>
