--- a/index.html
+++ b/index.html
@@ -153,14 +153,7 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Advanced</td>
-			    <td>Group</td>
-			    <td>830P</td>
-			    <td>1100A</td>
-			    <td class="last">110m</td>
-			  </tr>
-			  <tr>
-			    <td class="first">Beginner</td>
+			    <td class="first">Group</td>
 			    <td>Group</td>
 			    <td>830P</td>
 			    <td>1100A</td>
@@ -193,7 +186,6 @@ The dance studio where we hold classes is located right in front of exit 9 (show
                       </div>
                     </div>
                   </div>
-		</div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse"
@@ -212,7 +204,7 @@ Sign up by selecting one of the class passes from the table below. Class members
 			<tr>
 				<td class="first"> </td>
 				<td>1 Class</td>
-				<td>10 Class</td>
+				<td>10 Classes</td>
 				<td class="last">Validity</td>
 			</tr>
 			<tr class="even">
@@ -270,7 +262,6 @@ Become a member by selecting one of the group class memberships from the table b
 		      </table>
                     </div>
                   </div>
-                </div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse"
