introduce class passes and clean up accordion.

--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@ Become a member by selecting one of the group class memberships from the table b
 		      </table>
                     </div>
                   </div>
+		</div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse"
