introduce class passes and clean up accordion tags

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 	          <div class="accordion-group">
 	            <div class="accordion-heading">
 		      <a class="accordion-toggle" data-toggle="collapse"
-		         data-parent="#accordion2" href="#collapseOne">
+		         data-parent="#accordion2" href="#classSchedule">
 		        Class Schedule
 		      </a>
 	            </div>
-	            <div id="collapseOne" class="accordion-body collapse">
+	            <div id="classSchedule" class="accordion-body collapse">
 		      <div class="accordion-inner">
 			<table align="center">
 			  <tr>
@@ -166,11 +166,11 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
             	  <div class="accordion-group">
               	    <div class="accordion-heading">
                       <a class="accordion-toggle" data-toggle="collapse"
-                         data-parent="#accordion2" href="#collapseTwo">
+                         data-parent="#accordion2" href="#classLocation">
                         Class Location
                       </a>
                     </div>
-                    <div id="collapseTwo" class="accordion-body collapse">
+                    <div id="classLocation" class="accordion-body collapse">
                       <div class="accordion-inner">
 			<table align="center">
 			  <tr>
@@ -186,14 +186,15 @@ The dance studio where we hold classes is located right in front of exit 9 (show
                       </div>
                     </div>
                   </div>
+		</div>
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse"
-                       data-parent="accordion2" href="#collapseThree">
+                       data-parent="accordion2" href="#classPasses">
                       Class Passes
                     </a>
                   </div>
-                  <div id="collapseThree" class="accordion-body collapse">
+                  <div id="classPasses" class="accordion-body collapse">
                     <div class="accordion-inner">
 		      <p style="font-size:12px">
 		      </p>
@@ -226,11 +227,11 @@ Sign up by selecting one of the class passes from the table below. Class members
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse"
-                       data-parent="accordion2" href="#collapseThree">
+                       data-parent="accordion2" href="#classMemberships">
                       Class Memberships
                     </a>
                   </div>
-                  <div id="collapseThree" class="accordion-body collapse">
+                  <div id="classMemberships" class="accordion-body collapse">
                     <div class="accordion-inner">
 		      <p style="font-size:12px">
 		      </p>
@@ -266,11 +267,11 @@ Become a member by selecting one of the group class memberships from the table b
                 <div class="accordion-group">
                   <div class="accordion-heading">
                     <a class="accordion-toggle" data-toggle="collapse"
-                       data-parent="#accordion2" href="#collapseFour">
+                       data-parent="#accordion2" href="#furtherInformation">
                       Further Information
                     </a>
                   </div>
-                  <div id="collapseFour" class="accordion-body collapse">
+                  <div id="furtherInformation" class="accordion-body collapse">
                     <div class="accordion-inner">
 			<p style="font-size:12px">
 Classes are led by <a href="http://www.zumbicdo.com">Instrutor Zumbi</a>, the proprietor of <a href="http://www.quilombola.com">Quilombola Recreation</a>.
