introduce class passes and fix copy

--- a/index.html
+++ b/index.html
@@ -185,94 +185,93 @@ The dance studio where we hold classes is located right in front of exit 9 (show
 			</table>
                       </div>
                     </div>
-                  </div>
-		</div>
-                <div class="accordion-group">
-                  <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse"
-                       data-parent="accordion2" href="#classPasses">
-                      Class Passes
-                    </a>
-                  </div>
-                  <div id="classPasses" class="accordion-body collapse">
-                    <div class="accordion-inner">
-		      <p style="font-size:12px">
-		      </p>
-		      <p style="font-size:12px">
-Sign up by selecting one of the class passes from the table below. Class memberships are valid for a certain period of time. Please make payment before attending the first class in cash or via bank transfer to KEB Account 611-021258-055 (Munair Simpson).
-		      </p>
-		      <table align="center">
-			<tr>
+		  </div>
+                  <div class="accordion-group">
+                    <div class="accordion-heading">
+                      <a class="accordion-toggle" data-toggle="collapse"
+                         data-parent="accordion2" href="#classPasses">
+                        Class Passes
+                      </a>
+                    </div>
+                    <div id="classPasses" class="accordion-body collapse">
+                      <div class="accordion-inner">
+		        <p style="font-size:12px">
+		        </p>
+		        <p style="font-size:12px">
+Sign up by selecting one of the class passes from the table below. Class passes are valid for a certain period of time. Please make payment in cash or via bank transfer to KEB Account 611-021258-055 (Munair Simpson) before attending the first class.
+		        </p>
+		        <table align="center">
+			  <tr>
 				<td class="first"> </td>
 				<td>1 Class</td>
 				<td>10 Classes</td>
 				<td class="last">Validity</td>
-			</tr>
-			<tr class="even">
+			  </tr>
+			  <tr class="even">
 				<td class="first">Private</td>
 				<td>90k KRW</td>
 				<td>600k KRW</td>
 				<td class="last">2 Months</td>
-			</tr>
-			<tr class="odd">
+			  </tr>
+			  <tr class="odd">
 				<td class="first">Group</td>
 				<td>30k KRW</td>
 				<td>200k KRW</td>
 				<td class="last">1 Month</td>
-			</tr>
-		      </table>
+			  </tr>
+		        </table>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="accordion-group">
-                  <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse"
-                       data-parent="accordion2" href="#classMemberships">
-                      Class Memberships
-                    </a>
-                  </div>
-                  <div id="classMemberships" class="accordion-body collapse">
-                    <div class="accordion-inner">
-		      <p style="font-size:12px">
-		      </p>
-		      <p style="font-size:12px">
+                  <div class="accordion-group">
+                    <div class="accordion-heading">
+                      <a class="accordion-toggle" data-toggle="collapse"
+                         data-parent="accordion2" href="#classMemberships">
+                        Class Memberships
+                      </a>
+                    </div>
+                    <div id="classMemberships" class="accordion-body collapse">
+                      <div class="accordion-inner">
+		        <p style="font-size:12px">
+		        </p>
+		        <p style="font-size:12px">
 Become a member by selecting one of the group class memberships from the table below. Class memberships are valid for a certain period of time and cover all group classes if you join at the <b>advanced</b> level, or one group class a week if you join at the <b>beginner</b> level. You can pay in full by credit card at the Quilombola Recreation office, or send a bank transfer to KEB Account 611-021258-055 (Munair Simpson). You may also pay in two or three monthly installments. 
-		      </p>
-		      <table align="center">
-			<tr>
+		        </p>
+		        <table align="center">
+			  <tr>
 				<td class="first"> </td>
 				<td>3 Months</td>
 				<td>6 Months</td>
 				<td>12 Months</td>
 				<td class="last">Classes Included</td>
-			</tr>
-			<tr class="odd">
+			  </tr>
+			  <tr class="odd">
 				<td class="first">Advanced</td>
 				<td>900k KRW</td>
 				<td>1200k KRW</td>
 				<td>1800k KRW</td>
 				<td class="last">~20 Monthly</td>
-			</tr>
-			<tr class="even">
+			  </tr>
+			  <tr class="even">
 				<td class="first">Beginner</td>
 				<td>300k KRW</td>
 				<td>600k KRW</td>
 				<td>1200k KRW</td>
 				<td class="last">~4 Monthly</td>
-			</tr>
-		      </table>
+			  </tr>
+		        </table>
+                      </div>
                     </div>
-                  </div>
-		</div>
-                <div class="accordion-group">
-                  <div class="accordion-heading">
-                    <a class="accordion-toggle" data-toggle="collapse"
-                       data-parent="#accordion2" href="#furtherInformation">
-                      Further Information
-                    </a>
-                  </div>
-                  <div id="furtherInformation" class="accordion-body collapse">
-                    <div class="accordion-inner">
+		  </div>
+                  <div class="accordion-group">
+                    <div class="accordion-heading">
+                      <a class="accordion-toggle" data-toggle="collapse"
+                         data-parent="#accordion2" href="#furtherInformation">
+                        Further Information
+                      </a>
+                    </div>
+                    <div id="furtherInformation" class="accordion-body collapse">
+                      <div class="accordion-inner">
 			<p style="font-size:12px">
 Classes are led by <a href="http://www.zumbicdo.com">Instrutor Zumbi</a>, the proprietor of <a href="http://www.quilombola.com">Quilombola Recreation</a>.
 			</p>
@@ -289,21 +288,21 @@ Feel free to contact him directly for further information or with inquiries abou
 			    <td>zumbi@cdoseoul.com</td>
 			  </tr>
 			</table>
+                      </div>
                     </div>
-                  </div>
+	          </div>
 	        </div>
 	      </div>
 	    </div>
-	  </div>
-      	  <div class="row-fluid image">
-	    <div class="span4"> </div>
-	    <div class="span4">
-	      <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/qu-recreation-logo-300x120px.png" width="45%">
-	      <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/cdoseoul-logo-alpha-300x300px.png" width="45%">
+      	    <div class="row-fluid image">
+	      <div class="span4"> </div>
+	      <div class="span4">
+	        <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/qu-recreation-logo-300x120px.png" width="45%">
+	        <img src="https://s3-ap-northeast-1.amazonaws.com/cdoseoul/cdoseoul-logo-alpha-300x300px.png" width="45%">
+	      </div>
+	      <div class="span4"> </div>
 	    </div>
-	    <div class="span4"> </div>
 	  </div>
-	</div>
+        </div>
       </div>
-    </div>
 {% endblock %}
