update pricing information - add kids

--- a/index.html
+++ b/index.html
@@ -153,9 +153,16 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 			    <td class="last">50m</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Group</td>
+			    <td class="first">Adults</td>
 			    <td>Group</td>
 			    <td>830P</td>
+			    <td>1100A</td>
+			    <td class="last">110m</td>
+			  </tr>
+			  <tr>
+			    <td class="first">Kids</td>
+			    <td>Group</td>
+			    <td></td>
 			    <td>1100A</td>
 			    <td class="last">110m</td>
 			  </tr>
@@ -214,9 +221,15 @@ Sign up by selecting one of the class passes from the table below. Class passes 
 				<td class="last">2 Months</td>
 			  </tr>
 			  <tr class="odd">
-				<td class="first">Group</td>
+				<td class="first">Adults</td>
 				<td>30k KRW</td>
 				<td>200k KRW</td>
+				<td class="last">1 Month</td>
+			  </tr>
+			  <tr class="even">
+				<td class="first">Kids</td>
+				<td>12k KRW</td>
+				<td>80k KRW</td>
 				<td class="last">1 Month</td>
 			  </tr>
 		        </table>
