private to privates

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Capoeira is an Afro-Brazilian art form that incorporates rhythmic music, dance, 
 			    <td class="last">Time</td>
 			  </tr>
 			  <tr>
-			    <td class="first">Private</td>
+			    <td class="first">Privates</td>
 			    <td>1-On-1</td>
 			    <td>RSVP</td>
 			    <td>RSVP</td>
@@ -215,7 +215,7 @@ Sign up by selecting one of the class passes from the table below. Class passes 
 				<td class="last">Validity</td>
 			  </tr>
 			  <tr class="even">
-				<td class="first">Private</td>
+				<td class="first">Privates</td>
 				<td>90k KRW</td>
 				<td>600k KRW</td>
 				<td class="last">2 Months</td>
