change validity to 6 weeks

--- a/index.html
+++ b/index.html
@@ -218,19 +218,19 @@ Sign up by selecting one of the class passes from the table below. Class passes 
 				<td class="first">Privates</td>
 				<td>90,000</td>
 				<td>600,000</td>
-				<td class="last">2 Months</td>
+				<td class="last">6 Weeks</td>
 			  </tr>
 			  <tr class="odd">
 				<td class="first">Adults</td>
 				<td>30,000</td>
 				<td>200,000</td>
-				<td class="last">1 Month</td>
+				<td class="last">6 Weeks</td>
 			  </tr>
 			  <tr class="even">
 				<td class="first">Kids</td>
 				<td>15,000</td>
 				<td>100,000</td>
-				<td class="last">1 Month</td>
+				<td class="last">6 Weeks</td>
 			  </tr>
 		        </table>
                       </div>
