--- a/base.html
+++ b/base.html
@@ -158,6 +158,19 @@
     <!-- Footer -->
     <div class="row-fluid footer">
       <div class="span12">
+        <p> copyright (c) 2014 </p>
+        <p> quilombola recreation | cordão de ouro seoul </p>
+        <p> all rights reserved.  </p><hr />
+ 
+        <p>킬롬볼라 레크리에이션 사무실</p>
+        <p>110-111 서울 특별시 종로구 관철동</p>
+        <p>청계천로 67 종로1번가 1106호</p>
+ 
+        <p>휴대폰 번호 : 010-9090-9183</p><p>사업자 등록 번호 : 101-11-14837</p><p>대표자: munair simpson / instrutor zumbi</p>
+
+    <!-- 
+    <div class="row-fluid footer">
+      <div class="span12">
 	<p>
 copyright (c) 2012 quilombola | cordao de ouro seoul. all rights reserved.
 	</p>
@@ -168,7 +181,7 @@ copyright (c) 2012 quilombola | cordao de ouro seoul. all rights reserved.
 
 	<p>
 [mobile phone number : 010-9090-9183] [business registration number : 101-11-14837] [proprietor : munair simpson / instrutor zumbi]
-	</p>
+	</p> Footer -->
 	<!-- Goggle ga.js -->
 	<script type="text/javascript">
 
