--- a/base.html
+++ b/base.html
@@ -97,7 +97,7 @@
       .faq .last						{ color: #aaaaaa; }
       .faq a 							{ color: #faa732; }
       .footer 							{ background-color: #ffffff; color: #cccccc; font-family: 'Dorsa', Helvetica, Arial, san-serif; text-align: center; }
-      .footer p 						{ font-size: 20px; }
+      .footer p  						{ font-family: 'Limelight', Helvetica, Arial, san-serif; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
       .footer a 						{ color: #ccccff; }
       .separator {
         background-color: #ffffff;
@@ -158,21 +158,8 @@
     <!-- Footer -->
     <div class="row-fluid footer">
       <div class="span12">
-        <p> copyright (c) 2014 </p>
-        <p> quilombola recreation | cordão de ouro seoul </p>
-        <p> all rights reserved.  </p><hr />
- 
-        <p>킬롬볼라 레크리에이션 사무실</p>
-        <p>110-111 서울 특별시 종로구 관철동</p>
-        <p>청계천로 67 종로1번가 1106호</p>
- 
-        <p>휴대폰 번호 : 010-9090-9183</p><p>사업자 등록 번호 : 101-11-14837</p><p>대표자: munair simpson / instrutor zumbi</p>
-
-    <!-- 
-    <div class="row-fluid footer">
-      <div class="span12">
 	<p>
-copyright (c) 2012 quilombola | cordao de ouro seoul. all rights reserved.
+copyright (c) 2014 quilombola | cordão de ouro seoul. all rights reserved.
 	</p>
 
 	<p>
@@ -181,7 +168,7 @@ copyright (c) 2012 quilombola | cordao de ouro seoul. all rights reserved.
 
 	<p>
 [mobile phone number : 010-9090-9183] [business registration number : 101-11-14837] [proprietor : munair simpson / instrutor zumbi]
-	</p> Footer -->
+	</p>
 	<!-- Goggle ga.js -->
 	<script type="text/javascript">
 
