--- a/base.html
+++ b/base.html
@@ -97,7 +97,7 @@
       .faq .last						{ color: #aaaaaa; }
       .faq a 							{ color: #faa732; }
       .footer 							{ background-color: #ffffff; color: #cccccc; font-family: 'Dorsa', Helvetica, Arial, san-serif; text-align: center; }
-      .footer p  						{ font-family: 'Limelight', Helvetica, Arial, san-serif; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
+      .footer p  						{ font-size: 10px; font-family: 'Limelight', Helvetica, Arial, san-serif; text-shadow: 0 -1px 1px rgba(0,0,0,0.25); }
       .footer a 						{ color: #ccccff; }
       .separator {
         background-color: #ffffff;
