--- a/base.html
+++ b/base.html
@@ -159,15 +159,15 @@
     <div class="row-fluid footer">
       <div class="span12">
 	<p>
-copyright (c) 2014 quilombola | cordão de ouro seoul. all rights reserved.
+copyright (c) 2014 quilombola | cordão de ouro seoul.<br> all rights reserved.
 	</p>
 
 	<p>
-[quilombola recreation office: 1106 jongno 1 beon ga, gwancheol-dong, jongno-gu, seoul, korea]
+[quilombola recreation office]<br> [1106 jongno 1 beon ga, gwancheol-dong, jongno-gu, seoul]
 	</p>
 
 	<p>
-[mobile phone number : 010-9090-9183] [business registration number : 101-11-14837] [proprietor : munair simpson / instrutor zumbi]
+[mobile phone number : 010-9090-9183]<br> [business registration number : 101-11-14837]<br> [proprietor : munair simpson / instrutor zumbi]
 	</p>
 	<!-- Goggle ga.js -->
 	<script type="text/javascript">
