remove seoul in footer so that it is nicely formatted for the iphone.

--- a/base.html
+++ b/base.html
@@ -163,7 +163,7 @@ copyright (c) 2014 quilombola | cordão de ouro seoul.<br> all rights reserved.
 	</p>
 
 	<p>
-[quilombola recreation office]<br> [1106 jongno 1 beon ga, gwancheol-dong, jongno-gu, seoul]
+[quilombola recreation office]<br> [1106 jongno 1 beon ga, gwancheol-dong, jongno-gu]
 	</p>
 
 	<p>
