Change color of Monthly class pass and remove the meaningless monthly private class pass.

--- a/index.html
+++ b/index.html
@@ -212,13 +212,13 @@ Sign up by selecting one of the class passes from the table below. The monthly p
 				<td class="first"> </td>
 				<td>1 Class</td>
 				<td>5 Classes</td>
-				<td class="last">Monthly</td>
+				<td>Monthly</td>
 			  </tr>
 			  <tr class="even">
 				<td class="first">Privates</td>
 				<td>90,000</td>
 				<td>375,000</td>
-				<td class="last">600,000</td>
+				<td class="last"> - </td>
 			  </tr>
 			  <tr class="odd">
 				<td class="first">Adults</td>
