add Korean button to header section.

--- a/base.html
+++ b/base.html
@@ -131,7 +131,7 @@
 	    <span class="icon-bar"><span>
 	    <span class="icon-bar"><span>
 	  </button>
-	  <a class="brand" href="#">CDO Seoul</a>
+	  <a class="brand" href="#">CDO Seoul</a><a href="http://www.cdoseoul.kr"><button type="button" class="btn btn-warning">한국어</button></a>
           <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class="active">
@@ -145,7 +145,7 @@
                 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5215dfc335af1661"></script>
               <!-- AddThis Button END -->
 	      </li>
-	      <li><a href="http://www.cdoseoul.kr">한국어</a></li>
+	      <li></li>
 	    </ul>
 	  </div>
 	</div>
