--- a/base.html
+++ b/base.html
@@ -69,6 +69,7 @@
       form 							{ margin: 0 }
       hr 							{ margin: 10px 0; border: 0; border-top: 1px solid #eeeeee; border-bottom: 1px solid #ffffff; }
       .navigation, .marketing, .introduction, .faq, .footer 	{ padding: 10px 0px 10px 0px; }
+      .navigation-button 					{ padding-top: 0px; }
 
       /***** Form Styling (courtesy Amazium) *****/
       #stylized-form						{ margin:10px 0 20px 0; padding:10px; background-color:#f4f4f4; -webkit-border-radius:4px; -moz-border-radius:4px; }
@@ -131,7 +132,8 @@
 	    <span class="icon-bar"><span>
 	    <span class="icon-bar"><span>
 	  </button>
-	  <a class="brand" href="#">CDO Seoul</a><a href="http://www.cdoseoul.kr"><button type="button" class="btn btn-warning">한국어</button></a>
+	  <a class="brand" href="#">CDO Seoul</a>
+	  <a class="brand navigation-button" href="http://www.cdoseoul.kr"><button type="button" class="btn btn-warning">한국어</button></a>
           <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class="active">
@@ -145,7 +147,7 @@
                 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5215dfc335af1661"></script>
               <!-- AddThis Button END -->
 	      </li>
-	      <li></li>
+	      <li><a href="http://www.cdoseoul.kr">한국어</a></li>
 	    </ul>
 	  </div>
 	</div>
