remove navigation-button class.

--- a/base.html
+++ b/base.html
@@ -69,7 +69,6 @@
       form 							{ margin: 0 }
       hr 							{ margin: 10px 0; border: 0; border-top: 1px solid #eeeeee; border-bottom: 1px solid #ffffff; }
       .navigation, .marketing, .introduction, .faq, .footer 	{ padding: 10px 0px 10px 0px; }
-      .navigation-button 					{ padding-top: 0px; }
 
       /***** Form Styling (courtesy Amazium) *****/
       #stylized-form						{ margin:10px 0 20px 0; padding:10px; background-color:#f4f4f4; -webkit-border-radius:4px; -moz-border-radius:4px; }
@@ -133,7 +132,7 @@
 	    <span class="icon-bar"><span>
 	  </button>
 	  <a class="brand" href="#">CDO Seoul</a>
-	  <a class="brand navigation-button" href="http://www.cdoseoul.kr"><button type="button" class="btn btn-warning">한국어</button></a>
+	  <a class="brand" style="padding-top: 0px" href="http://www.cdoseoul.kr"><button type="button" class="btn btn-warning">한국어</button></a>
           <div class="nav-collapse collapse">
 	    <ul class="nav">
 	      <li class="active">
