--- a/base.html
+++ b/base.html
@@ -137,7 +137,7 @@
 	    <ul class="nav">
 	      <li class="active">
               <!-- AddThis Button BEGIN -->
-                <div style="padding-top:8px" class="addthis_toolbox addthis_default_style">
+                <div class="addthis_toolbox addthis_default_style" style="padding-top:8px; width:350px;">
                   <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
                   <a class="addthis_button_tweet"></a>
                   <a class="addthis_counter addthis_pill_style"></a>
